Make tests more thorough